bk_ida/gobmkida/g3/routine_to_string
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/routine_to_string/src/engine/printutils.c:842:26: error: use of undeclared identifier 'unk_4B09D9'
result = ( const char *)&unk_4B09D9; 
                         ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/routine_to_string/src/engine/printutils.c:854:26: error: use of undeclared identifier 'unk_4B09C1'
result = ( const char *)&unk_4B09C1; 
                         ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/routine_to_string/src/obj/1/printutils.o] Error 1
